Bug 73750 - Incorrect multi touch functionality - interference between multi touch events: application move and touch
Summary: Incorrect multi touch functionality - interference between multi touch events...
Status: VERIFIED FIXED
Alias: None
Product: Wayland
Classification: Unclassified
Component: weston (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Wayland bug list
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-01-17 19:25 UTC by Anu Reddy
Modified: 2014-01-20 20:35 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Anu Reddy 2014-01-17 19:25:27 UTC
Steps: 
1. Launch Weston.
2. Launch Weston terminal: weston-terminal
3. Move the terminal by touching the terminal tittle bar and drag it across the screen.
4. While moving the terminal, place a finger on the screen.
5. Now stop moving the terminal.
6. Randomly touch the screen in various locations. 
7. Observe that terminal moves to where the screen has been touched randomly.

Expected result:
Terminal should not move due to touch at random points as the terminal move is a different touch event.


Software Stack
wayland (HEAD) 1.3.92-0-gc102c20
drm (HEAD) libdrm-2.4.50-0-g4c5de72
mesa (HEAD) remotes/origin/10.0-0-g3a62718
libva (HEAD) libva-1.2.1-0-g88ed1eb
intel-driver (HEAD) 1.2.1-0-g8f306e3
weston (HEAD) 1.3.92-0-gb637a40
Comment 1 U. Artie Eoff 2014-01-17 19:33:44 UTC
To further clarify, change step 6 to:

While keeping the second finger down on the display, lift the first finger and start touching different locations with that first finger.
Comment 2 Kristian Høgsberg 2014-01-17 23:19:30 UTC
commit 8e80a31ba4f09dd27793cca42c5e412e9a167af6
Author: Kristian Høgsberg <krh@bitplanet.net>
Date:   Fri Jan 17 15:18:10 2014 -0800

    shell: Stop moving surfae after touch point 0 goes up
    
    The grab stays alive as long as at least one touch point is down.  If touch
    point 0 is lifted while other touch points are down, the surface will jump
    around when touch point 0 is put down again.
    
    This change marks the grab as inactive once touch point 0 is lifted
    and then ignores touch events until all touch points eventually are
    lifted and the grab terminates.
    
    https://bugs.freedesktop.org/show_bug.cgi?id=73750


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.